--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,6 +1,6 @@
-APP_WRITE_ID = '' # айди который в коде при создании дается appwrite 
+APP_WRITE_ID = '' 
 DB_ID = ''
-COLLECTION_DEALS = 'deals' # create collections  "deals" ит д 
+COLLECTION_DEALS = 'deals' 
 COLLECTION_CUSTOMERS = 'customers'
 COLLECTION_COMMENTS = 'comments'
-STORAGE_ID = 'storage' # https://cloud.appwrite.io/console/project-vue-crm-test/storage 
+STORAGE_ID = 'storage' 
